# case1

./: .gitignore
back/: .env.example  README.md  main.py  pyproject.toml
back/migrations/: 001_initial.sql
back/src/ai/: __init__.py  llm_client.py  whisper_client.py
back/src/core/: config.py  schemas.py
back/src/db/: database.py
back/src/routes/: routes.py
damumed-sandbox/: README.md  package-lock.json  package.json  server.js
damumed-sandbox/public/: app.js  index.html  styles.css
extension/: README.md  backend-bridge.js  background.js  content.css  content.js  damumed-dom-config.js  manifest.json  popup.css  popup.html  popup.js  voice-commands.js
